--- a/starter/critter/src/main/resources/application.properties
+++ b/starter/critter/src/main/resources/application.properties
@@ -5,6 +5,19 @@ server.port=8082
 # Note: Users must create a mysql db that they will reference here, create a user that has access to it on localhost
 #       and provide the credentials below to access it
 
+spring.datasource.url=jdbc:mysql://localhost:3306/critter?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=admin2
+spring.datasource.password=sa1234
+spring.datasource.initialization-mode=always
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+#spring.jpa.database-platform=
 # uncomment the below lines to view sql output in console
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+
+#create user 'admin'@'localhost' identified by 'sa1234'; -- Create the user
+#
+#grant all on critterdb.* to 'sa'@'localhost'; -- Gives all privileges to that user on new db
